--- a/src/style.css
+++ b/src/style.css
@@ -1,4 +1,12 @@
-h1{
+*{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+body {
+    background-color: #eee;
+}
+/* h1{
     color: #444;
     font-size: 100px;
-}
+} */
